# synth

./: .gitignore  CMakeLists.txt  CMakeSettings.json  cpp.hint
rtmidi/: CMakeLists.txt
sndfilter/src/: snd.h
src/: common.h  dr_wav.h  main.cpp  node_canvas.cpp  node_canvas.h  rhodes.h  sdl2.h
src/engine/: adsr.cpp  adsr.h  adsr_node.hpp  chorus.cpp  chorus.h  compiler.cpp  compiler.h  lfo.hpp  node_logic.cpp  node_logic.h  phase.cpp  phase.h  remap.hpp  sine_wave.hpp  storage.hpp  synth_vm.cpp  synth_vm.h  wave_guide.cpp  wave_guide.h
src/gui/: CMakeLists.txt  events.cpp  events.h  font.h  font_small.h  gui.cpp  gui.h  layout.cpp  layout.h  renderer.cpp  renderer.h  skin.h  stb.cpp
src/gui/widgets/: button.cpp  button.h  check.cpp  check.h  keyboard.cpp  keyboard.h  label.cpp  label.h  node_canvas.cpp  node_canvas.h  panel.cpp  panel.h  spinner.cpp  spinner.h  widget.cpp  widget.h
src/log/: log.cpp  log.h
